--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Multiplatform Aplications Development</div>
-            <img src="images/UE.jpg" alt="UE" />
+            <img src="images/UE.JPG" alt="UE" />
           </div>
         </div>
       </div>
