--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Daniel Alonso Casilda CV</title>
-    <meta name="description" content="Built with Bootstrap 4, HTML5 Now UI Kit and FontAwesome"/>
+    <!--"Built with Bootstrap 4, HTML5 Now UI Kit and FontAwesome"-->
+    <meta name="description" content="Daniel Alonso Casilda CV"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css" rel="stylesheet">
