--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/DanielAlonsoWB.jpg" alt="Image"/></a></div>
           <div class="h2 title">Daniel Alonso Casilda</div>
-          <p class="category text-white">Android / WEB developer, Big Data enthusiast, Graphic Designer, Photographer...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/danielalonsocasilda/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
+          <p class="category text-white">Android / WEB developer, Big Data enthusiast...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/danielalonsocasilda/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
         </div>
       </div>
       <div class="section">
@@ -63,7 +63,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Daniel Alonso. Android / WEB developer, Big Data enthusiast, Graphic Designer, Photographer...</p>
+            <p>Hello! I am Daniel Alonso. Android / WEB developer, Big Data enthusiast...</p>
             <p>I encourage you to consult my LinkedIn to see in depth my work experience.</p>
             <p><a href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank">Learn more in LinkedIn</a></p>
           </div>
@@ -326,7 +326,6 @@
     </div></a>
 </div>
 <div id="demo" class="carousel slide" data-ride="carousel">
-
   <!-- Indicadores -->
   <ul class="carousel-indicators">
     <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -372,47 +371,13 @@
         <div class="row">
           <div class="col-md-9">
             <div class="card mb-0" data-aos="zoom-in">
-              <div class="h4 text-center title">Contact Me</div>
+              <div class="h4 text-center title">Contact me</div>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <form id="contact-form" class="contact" name="contact-form" method="POST" action="enviar2.php">
-                      <div class="p pb-3"><strong>Feel free to contact me </strong></div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
-                            <input class="form-control" type="text" name="name" placeholder="Name" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                            <input class="form-control" type="email" name="email" placeholder="E-mail" required="required"/>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row mb-3">
-                        <div class="col">
-                          <div class="form-group">
-                            <textarea class="form-control" name="message" placeholder="Your Message" required="required"></textarea>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <button class="btn btn-primary" type="submit">Send</button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>danielcasildaalonso@gmail.com</p>
+                    <a href="mailto:danielcasildaalonso@gmail.com?Subject=Mantengamos%20una%20conversación"><button class="btn btn-primary">Contact me</button></a>
                   </div>
-                </div>
               </div>
             </div>
           </div>
