repair image links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/DanielAlonsoWB.jpg" alt="Image"/></a></div>
           <div class="h2 title">Daniel Alonso Casilda</div>
-          <p class="category text-white">Android / WEB developer, Big Data enthusiast...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/danielalonsocasilda/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
+          <p class="category text-white">Android / WEB developer, Big Data enthusiast...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
         </div>
       </div>
       <div class="section">
@@ -182,7 +182,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/androidX86.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/androidX86.JPG" alt="Image"/>
                     <figcaption><a href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank"></a>
                       <div class="h4">AndroidX86 Apps</div>
                       <p>Android apps on Google Play</p>
@@ -205,7 +205,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/playStore.jpg" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/playStore.JPG" alt="Image"/>
                     <figcaption><a href="https://play.google.com/store/apps/details?id=uem.dam.seg.airmadrid&gl=ES" target="_blank"></a>
                       <div class="h4">Android</div>
                       <p>Android Apps on Google Play</p>
