--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/AlonsoCasilda" target="_blank" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a>
+          <div class="button-container">
+            <a class="btn btn-default btn-round btn-lg btn-icon btn-github" href="https://github.com/AlonsoCasilda" target="_blank" rel="tooltip" title="Follow me on GitHub"><i class="fa fa-github"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon btn-linkedin" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a>
         </div>
       </div>
     </div>
@@ -388,7 +390,9 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link " href="https://github.com/AlonsoCasilda" target="_blank"><i class="fa fa-github fa-2x " aria-hidden="true"></i></a>
+      <div class="container text-center">
+        <a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a>
+        <a class="cc-github btn btn-link " href="https://github.com/AlonsoCasilda" target="_blank"><i class="fa fa-github fa-2x " aria-hidden="true"></i></a>
       <div class="h4 title text-center">Daniel Alonso</div>
       <div class="text-center text-muted">
         <p>&copy; Daniel Alonso Casilda<br><a class="credit" href="https://www.linkedin.com/in/danielalonsocasilda/" target="_blank">Developer</a></p>
