--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/DanielAlonsoWB.jpg" alt="Image"/></a></div>
           <div class="h2 title">Daniel Alonso Casilda</div>
-          <p class="category text-white">Android / WEB developer, Big Data enthusiast...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href = https://github.com/AlonsoCasilda/CV/blob/master/CV_Daniel%20Alonso%20Casilda.pdf" download="CV_Daniel_Alonso_Casilda" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
+          <p class="category text-white">Android / WEB developer, Big Data enthusiast...</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href = https://github.com/AlonsoCasilda/CV/blob/master/CV_Daniel%20Alonso%20Casilda.pdf download="CV_Daniel_Alonso_Casilda" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">See CV</a>
         </div>
       </div>
       <div class="section">
